обновил контент сайта

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       </h2>
       <h1>КАЗАХСТАНСКАЯ ФЕДЕРАЦИЯ ФУНКЦИОНАЛЬНОГО МНОГОБОРЬЯ</h1>
     
-      <h2>FUNCTIONAL FITNESS FEDERATION KAZAKHSTAN</h2>
+      <h2>KAZAKHSTAN FUNCTIONAL FITNESS FEDERATION</h2>
     </div>
 
     <div class="federation-logo right">
