--- a/news.html
+++ b/news.html
@@ -192,8 +192,11 @@
     <div class="federation-container">
       <div class="federation-logo left"><img src="logo.png" alt=""></div>
       <div class="federation-text">
+        <h2 style="color:#333;font-size:18px;margin:3px 0;font-weight:700;text-transform:uppercase;">
+        ҚАЗАҚСТАНДЫҚ ФУНКЦИОНАЛДЫҚ КӨПСАЙЫС ФЕДЕРАЦИЯСЫ
+      </h2>
         <h1>КАЗАХСТАНСКАЯ ФЕДЕРАЦИЯ ФУНКЦИОНАЛЬНОГО МНОГОБОРЬЯ</h1>
-        <h2>FUNCTIONAL FITNESS FEDERATION KAZAKHSTAN</h2>
+        <h2>KAZAKHSTAN FUNCTIONAL FITNESS FEDERATION</h2>
       </div>
       <div class="federation-logo right"><img src="sponsor.png" alt=""></div>
     </div>
@@ -260,6 +263,9 @@
         <a href="docs.html" style="color:#fff;font-weight:600;">Основные документы</a>
       </nav>
       <div class="footer-socials">
+        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
+    <img src="instagramlogo.PNG" alt="Instagram">
+  </a>
         <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="telegramlogo.PNG" alt="Telegram"></a>
         <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="facebooklogo.PNG" alt="Facebook"></a>
         <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="tiktoklogo.PNG" alt="TikTok"></a>
