--- a/news.html
+++ b/news.html
@@ -67,7 +67,7 @@
     .federation-logo img{width:264px;height:auto;object-fit:contain}
     .federation-text{text-align:center;flex:1;margin:0 30px}
     .federation-text h1{color:#0b63b7;font-size:28px;margin:0 0 10px 0;font-weight:800;text-transform:uppercase}
-    .federation-text h2{color:#333;font-size:22px;margin:0;font-weight:700;text-transform:uppercase}
+    .federation-text h2{color:#333;font-size:18px;margin:0;font-weight:700;text-transform:uppercase}
     @media(max-width:768px){
       .federation-container{flex-direction:column;text-align:center;border-radius:20px}
       .federation-logo img{width:140px;margin-bottom:15px}
@@ -196,7 +196,7 @@
         ҚАЗАҚСТАНДЫҚ ФУНКЦИОНАЛДЫҚ КӨПСАЙЫС ФЕДЕРАЦИЯСЫ
       </h2>
         <h1>КАЗАХСТАНСКАЯ ФЕДЕРАЦИЯ ФУНКЦИОНАЛЬНОГО МНОГОБОРЬЯ</h1>
-        <h2>KAZAKHSTAN FUNCTIONAL FITNESS FEDERATION</h2>
+        <h2>FUNCTIONAL FITNESS FEDERATION KAZAKHSTAN</h2>
       </div>
       <div class="federation-logo right"><img src="sponsor.png" alt=""></div>
     </div>
@@ -279,3 +279,4 @@
   </footer>
 </body>
 </html>
+
