--- a/index.html
+++ b/index.html
@@ -284,8 +284,7 @@
         ҚАЗАҚСТАНДЫҚ ФУНКЦИОНАЛДЫҚ КӨПСАЙЫС ФЕДЕРАЦИЯСЫ
       </h2>
       <h1>КАЗАХСТАНСКАЯ ФЕДЕРАЦИЯ ФУНКЦИОНАЛЬНОГО МНОГОБОРЬЯ</h1>
-    
-      <h2>KAZAKHSTAN FUNCTIONAL FITNESS FEDERATION</h2>
+    <h2>FUNCTIONAL FITNESS FEDERATION KAZAKHSTAN</h2>
     </div>
 
     <div class="federation-logo right">
