--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   .more-btn .hamburger::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
   .more-btn .hamburger::before{top:-6px}
   .more-btn .hamburger::after{top:6px}
-  /* icon image replacement: use the image file `tochka.png` (place it in project root) */
+  /* icon image replacement: use the image file `tochka.PNG` (place it in project root) */
   .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
   /* shift hamburger / icon a few pixels to the right so it sits visually before socials */
   .more-btn .hamburger, .more-btn .more-icon{transform:translateX(4px)}
@@ -380,7 +380,7 @@
       </div>
           <div class="more-dropdown" id="moreDropdown" style="margin-right:10px;">
             <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
-            <img src="tochka.png" class="more-icon" alt="menu">
+            <img src="tochka.PNG" class="more-icon" alt="menu">
             </button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
@@ -565,7 +565,7 @@
         flex-direction:column;
         text-align:left;
       ">
-        <img src="game1.jpg"CrossFit Challenge 2025" style="
+  <img src="game1.jpg" alt="CrossFit Challenge 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
@@ -611,7 +611,7 @@
         flex-direction:column;
         text-align:left;
       ">
-        <img src="imageskz\kz.JPG" alt="Зимний Кубок 2025" style="
+  <img src="imageskz/kz.JPG" alt="Зимний Кубок 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
@@ -657,7 +657,7 @@
         flex-direction:column;
         text-align:left;
       ">
-        <img src="imageschampionat\asia1.jpg" alt="Summer Games 2025" style="
+  <img src="imageschampionat/asia1.jpg" alt="Summer Games 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
