--- a/docs3.html
+++ b/docs3.html
@@ -32,7 +32,7 @@
   nav.main-nav{display:flex;align-items:center;gap:8px}
   .more-dropdown{position:absolute;right:320px;top:50%;transform:translateY(-50%);z-index:70;display:inline-block}
   .more-btn{background:transparent;color:#fff;border:none;font-size:26px;cursor:pointer;padding:8px 10px;border-radius:8px;font-weight:900;line-height:1}
-  /* icon image replacement: use the image file `tochka.png` (place it in project root) */
+  /* icon image replacement: use the image file `tochka.PNG` (place it in project root) */
   .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
   /* вертикальные точки: используем символ U+22EE (⋮) */
   .more-menu{position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:var(--text);box-shadow:0 8px 24px rgba(3,20,45,0.12);border-radius:10px;overflow:hidden;min-width:220px;z-index:60;padding:6px 0}
@@ -129,7 +129,7 @@
           <a href="leadership.html">Руководство</a>
           <!-- остальные кнопки в выпадающем меню '...' -->
             <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn"><img src="tochka.png" class="more-icon" alt="menu"></button>
+            <button class="more-btn" id="moreBtn"><img src="tochka.PNG" class="more-icon" alt="menu"></button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
