--- a/news3.html
+++ b/news3.html
@@ -37,7 +37,7 @@
   .more-btn .hamburger::before,.more-btn .hamburger::after{content:"";position:absolute;left:0;width:22px;height:2px;background:#fff;border-radius:2px}
   .more-btn .hamburger::before{top:-7px}
   .more-btn .hamburger::after{top:7px}
-  /* icon image replacement: use the image file `tochka.png` (place it in project root) */
+  /* icon image replacement: use the image file `tochka.PNG` (place it in project root) */
   .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
   .more-menu{position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:var(--text);box-shadow:0 8px 24px rgba(3,20,45,0.12);border-radius:10px;overflow:hidden;min-width:220px;z-index:60;padding:6px 0}
   .more-menu a{display:block;padding:10px 14px;color:var(--text);font-weight:700;border-bottom:1px solid rgba(0,0,0,0.04);text-decoration:none}
@@ -272,7 +272,7 @@
       </div>
 
           <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="tochka.png" class="more-icon" alt="menu"></button>
+            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="tochka.PNG" class="more-icon" alt="menu"></button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
@@ -315,11 +315,11 @@
       
       <div class="gallery-container">
         <div class="gallery-slide" id="gallerySlide">
-          <img src="imageschampionat\asia1.jpg" alt="">
-          <img src="imageschampionat\asia2.jpg" alt="">
-          <img src="imageschampionat\asia3.jpg" alt="">
-          <img src="imageschampionat\asia4.jpg" alt="">
-          <img src="imageschampionat\asia5.jpg" alt="">
+          <img src="imageschampionat/asia1.jpg" alt="">
+          <img src="imageschampionat/asia2.jpg" alt="">
+          <img src="imageschampionat/asia3.jpg" alt="">
+          <img src="imageschampionat/asia4.jpg" alt="">
+          <img src="imageschampionat/asia5.jpg" alt="">
         </div>
       </div>
 
